update package json
Signed-off-by: Jordan Hall <Jordan@libertyware.co.uk>

--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "ng": "ng",
-    "start": "bunx --bun vite build --watch & bun run --watch server.ts",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "dev": "bunx --bun vite dev",
-    "viteBuild": "bunx --bun vite build"
+    "dev": "vite dev",
+    "viteBuild": "vite build"
   },
   "dependencies": {
     "@angular/animations": "^17.2.1",
