--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,6 @@
     "outDir": "./out-tsc/app",
     "types": ["@types/bun"]
   },
-  "files": ["src/main.ts", "src/main.server.ts"],
+  "files": ["src/main.ts"],
   "include": ["src/**/*.d.ts"]
 }
